# robot_workspace

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  cliff.toml  environment.yaml  main.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: auto-version.yml  codeql.yml  docs.yml  lint.yml  release.yml  tests.yml
config/: niryo_config.yaml  widowx_config.yaml
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/ADR/: index.html
dev/ADR/ADR-001/: index.html
dev/api/: index.html
dev/architecture/: index.html
dev/configuration/: index.html
dev/de/: index.html
dev/de/api/: index.html
dev/de/architecture/: index.html
dev/de/configuration/: index.html
dev/de/development/docstrings/: index.html
dev/de/development/testing/: index.html
dev/de/getting-started/: index.html
dev/de/installation/: index.html
dev/de/quality_metrics/: index.html
dev/de/troubleshooting/: index.html
dev/de/usage/examples/: index.html
dev/development/docstrings/: index.html
dev/development/testing/: index.html
dev/en/: index.html
dev/en/ADR/: index.html
dev/en/ADR/ADR-001/: index.html
dev/en/api/: index.html
dev/en/architecture/: index.html
dev/en/configuration/: index.html
dev/en/de/: index.html
dev/en/de/api/: index.html
dev/en/de/architecture/: index.html
dev/en/de/configuration/: index.html
dev/en/de/development/docstrings/: index.html
dev/en/de/development/testing/: index.html
dev/en/de/getting-started/: index.html
dev/en/de/installation/: index.html
dev/en/de/quality_metrics/: index.html
dev/en/de/troubleshooting/: index.html
dev/en/de/usage/examples/: index.html
dev/en/development/adding_robot_support/: index.html
dev/en/development/docstrings/: index.html
dev/en/development/testing/: index.html
dev/en/en/: index.html
dev/en/en/api/: index.html
dev/en/en/architecture/: index.html
dev/en/en/configuration/: index.html
dev/en/en/development/adding_robot_support/: index.html
dev/en/en/development/docstrings/: index.html
dev/en/en/development/testing/: index.html
dev/en/en/getting-started/: index.html
dev/en/en/installation/: index.html
dev/en/en/quality_metrics/: index.html
dev/en/en/troubleshooting/: index.html
dev/en/en/usage/examples/: index.html
dev/en/getting-started/: index.html
dev/en/installation/: index.html
dev/en/quality_metrics/: index.html
dev/en/troubleshooting/: index.html
dev/en/usage/examples/: index.html
dev/getting-started/: index.html
dev/installation/: index.html
dev/quality_metrics/: index.html
dev/search/: search_index.json
dev/tex/: architecture_diagram.tex
dev/troubleshooting/: index.html
dev/usage/examples/: index.html
docs/: INSTALL.md  QUICK_REFERENCE.md  README.md  api.md  examples.md
docs/ADR/: ADR-001.md  README.md
docs/de/: configuration.md  getting-started.md  index.md  installation.md  quality_metrics.md  troubleshooting.md
docs/de/api/: index.md
docs/de/architecture/: index.md
docs/de/development/: docstrings.md  testing.md
docs/de/usage/: examples.md
docs/diagrams/: robot_workspace_overview.mmd
docs/en/: getting-started.md  index.md  quality_metrics.md
docs/en/api/: index.md
docs/en/architecture/: index.md
docs/en/development/: adding_robot_support.md  docstrings.md  testing.md
docs/tex/: architecture_diagram.tex  robot_workspace_uml.tex
robot_workspace/: __init__.py  cli.py  config.py  models.py  protocols.py
robot_workspace/common/: __init__.py  logger.py
robot_workspace/objects/: __init__.py  object.py  object_api.py  objects.py  pose_object.py
robot_workspace/utils/: __init__.py  utils.py
robot_workspace/workspaces/: __init__.py  niryo_workspace.py  niryo_workspaces.py  widowx_workspace.py  widowx_workspaces.py  workspace.py  workspaces.py
scripts/: bump_version.py
tests/: README.md  conftest.py  test_additional_coverage.py  test_cli.py  test_config.py  test_integration.py  test_logger_coverage.py  test_models.py  test_multi_workspace.py  test_object.py  test_objects.py  test_utils.py  test_widowx_workspace.py  test_workspace_coverage.py
tests/integration/: test_integration.py  test_multi_workspace_queries.py
tests/objects/: test_object.py  test_objects.py  test_pose_object.py
tests/unit/: test_additional_coverage.py  test_config_additional.py  test_objects.py  test_objects_additional.py  test_pose_object.py  test_utils_additional.py  test_workspace.py  test_workspaces_additional.py
tests/workspaces/: test_multi_workspace.py  test_widowx_workspace.py  test_workspace.py  test_workspace_coverage.py
